WFCORE-5983 JPMS properties test configuration not in sync with script executable.