@@ -87,6 +87,8 @@
         <standard.client.modular.jdk.args>
             --add-exports=java.desktop/sun.awt=ALL-UNNAMED
             --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
+            --add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED
+            --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED
             --add-opens=java.base/java.io=ALL-UNNAMED
             --add-opens=java.base/java.lang=ALL-UNNAMED
             --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
